src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  position: relative;

}


.background{

  position: absolute;
  top: 0;
  left: 0;
  z-index: -3;
  width: 100vw;
  height: 100vh;
  background: url('./images/background.jpg');
  background-size: cover;
  background-repeat: no-repeat;
    /* Add the blur effect */
    filter: blur(3px);
    -webkit-filter: blur(3px);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

input{
  font-size: 3rem!important;
  color: rgb(210, 31, 84);
  list-style-type: none;
  text-align: center;
  background-color: rgba(255, 255, 255, 0.5);
}

input:focus{
  background-color: rgba(255, 255, 255, 0.8);

}

li{
  font-size: 3rem!important;
  list-style-type: none;
  text-align: center;
  color: white;
}

*,
*::before,
*::after{
    box-sizing: inherit;
    font-size: 62.5%;
    margin: 0;
    padding: 0;
    font-family: 'Anton', sans-serif;

}

.btn{
  background-color: rgb(210, 31, 84);
  font-size: 3rem;
  padding: 2rem;
  margin: 1rem;
}


::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
  text-align: center;
  font-weight: bolder;
  color: rgb(210, 31, 84)!important;
  opacity: 1; /* Firefox */
}

:-ms-input-placeholder { /* Internet Explorer 10-11 */
  color: rgb(210, 31, 84)!important;
}

::-ms-input-placeholder { /* Microsoft Edge */
  color: rgb(210, 31, 84)!important;
}

html{
  box-sizing: border-box;
}

.light-text{
  color: rgb(243, 76, 126)!important;
}

form{
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
}

h1{
    font-family: 'Hanalei', cursive;
}


/* GITHUB ANIMATIONS */
  .fancy-link{
    margin-top: 1rem;
    display: block;
    font-family: sans-serif;
    text-decoration: none;
    color: #333;
    border: 2px solid #333;
    letter-spacing: 2px;
    text-align: center;
    position: relative;
    transition: all .35s;
    width: 150px;
    height: 40px;
    line-height: 40px;
    font-size: 18px;
  }

  .fancy-link span{
    position: relative;
    z-index: 2;
  }

  .fancy-link:after{
    background: #ff003b;
    transition: all .35s;
    position: absolute;
    content: "";
    top: 0;
    left: 0;
    width: 0;
    height: 100%;

  }

  .fancy-link:hover{
    color: #fff;
  }

  .fancy-link:hover:after{
    width: 100%;
  }

/* END OF GITHUB ANIMATIONS */


/* TITLE ANIMATION */


@keyframes upAnim{

  0%{
    transform: translateY(0) scaleY(1) scaleX(1);
  }

  40%{
    transform: translateY(-1.1rem) scaleY(1.3) scaleX(0.9);

  }

  50%{
    transform: translateY(-1.2rem) scaleY(1) scaleX(1);
    color: rgb(243, 128, 128);
  }

  80%{
    transform: translateY(0) scaleY(.7) scaleX(1.3);
  }

  100%{
    transform: translateY(0) scaleY(1) scaleX(1);
  }


}

.hover0{
  animation: upAnim 1s 0.125s ease-out;
}

.hover1{
  animation: upAnim 1s 0.125s ease-out;
}

.hover2{
  animation: upAnim 1s 0.25s ease-out;
}

.hover3{
  animation: upAnim 1s 0.375s ease-out;
}

.hover4{
  animation: upAnim 1s 0.5s ease-out;
}

.hover5{
  animation: upAnim 1s 0.625s ease-out;
}

